This file includes only a short list of the changes between MPC-HC's versions.
For the older changes see:
https://github.com/mpc-hc/mpc-hc/blob/master/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


1.6.7 - not released yet
========================
+ Ticket #2144, Subtitles downloader: Sort by language and then by filename by default
+ Ticket #2837, New INI parser: the accesses are now cached for faster settings loading/saving.
  Using the INI file should now be as fast as using the registry
+ Ticket #2987, Playlist improvements:
  - Scroll and select the first newly added item
  - Put MPC-HC on top and give the focus to the playlist after a drag and drop
* Updated Basque, Catalan, Czech, German, Greek, Simplified Chinese and Turkish translations
* Updated Little CMS to v2.5 (git 570d411)
* Ticket #2689,  Replace "On top > Never" by "On top > Default". In most of the
  cases "On top > Default" will have the exact same behavior than "On top > Never"
  but it won't try to override the "On top" flag if an external tool sets it
! Fix a crash when VMR-7 (renderless) renderer failed to load
! SSA subtitles rendering: Improve error checking to avoid possible crashes when
  the SSA script was using obviously wrong values
! Ticket #1392, DVD subtitles: Improve rendering in case of overlap. Ensure that both subtitles
  will be shown.
! Ticket #2991, Fix loading of MicroDVD subtitles
! Ticket #3001, "After Playback": Always give "Once" events a higher priority
  than "Always" events